# av_bootcamp

./: .gitignore  README.md  SOLUTION.md  pyproject.toml  submission.csv
artifacts/models/: catboost_events_v2_seed_17.cbm  catboost_events_v2_seed_2026.cbm  catboost_events_v2_seed_42.cbm  metadata.json
data/: train.csv:Zone.Identifier
scripts/: predict.py  train.py  validate.py
src/lead_priority/: __init__.py  data.py  features.py  metrics.py  model.py
tests/: test_features.py  test_metrics.py
