[project]
name = "lead-prioritization-solution"
version = "0.1.0"
description = "Reproducible solution for the lead prioritization challenge"
requires-python = ">=3.11,<3.13"
dependencies = [
    "catboost>=1.2.8,<2",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "scikit-learn>=1.5,<2",
]

[dependency-groups]
dev = [
    "pytest>=8,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lead_priority"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

